--- a/index.html
+++ b/index.html
@@ -9,64 +9,62 @@
 	<h1>Graficas con php</h1>
 	<div id="grafica">
 	</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 	<script type="text/javascript">
 		"use strict";
-var http = new XMLHttpRequest();
-		http.open('get','datos.php',true);
-		http.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-		http.onreadystatechange = function() {
-                if (this.readyState === 4){
-                    var data = JSON.parse(this.responseText);
-                    var datos = [].concat(data[0],data[1]);
-                     console.log(datos);
-                     var options = [];
-                    var options = {
-          series: datos,
+    //VARIABLE PARA CONSTRUIR GRAFICA
+    var options = {
+          series: [],
           chart: {
-          type: 'bar',
-          height: 350
-        },
-        plotOptions: {
-          bar: {
-            horizontal: false,
-            columnWidth: '55%',
-            endingShape: 'rounded'
-          },
+          height: 350,
+          type: 'line',
+          zoom: {
+            enabled: false
+          }
         },
         dataLabels: {
           enabled: false
         },
         stroke: {
-          show: true,
-          width: 2,
-          colors: ['transparent']
+          curve: 'straight'
+        },
+        title: {
+          text: 'Gastos e Ingresos 2022',
+          align: 'left'
+        },
+        grid: {
+          row: {
+            colors: ['#f3f3f3', '#f3f3f3']
+          },
         },
         xaxis: {
-          categories: data[2],
-        },
-        yaxis: {
-          title: {
-            text: 'Tabla de ingresos y gastos'
-          }
-        },
-        fill: {
-          opacity: 1,
-          colors: ['#3235BD', '#DB00DE']
-        },
-        tooltip: {
-          y: {
-            formatter: function (val) {
-              return "$" + val + " pesos MX"
-            }
-          }
+          categories: [],
         }
         };
-        var chart = new ApexCharts(document.querySelector('#grafica'), options);
+        //CREAMOS EL OBJETO PARA TENERLO EN NUESRO NAVEGADOR
+        var chart = new ApexCharts(document.querySelector("#grafica"), options);
         chart.render();
-                }
-            };
-         http.send();
+
+
+window.setInterval(function () {
+  //Consulta e ingresa datos a grafica.
+  $.get('http://graficas-php.net/datos.php', function (respuesta) {
+    var data = JSON.parse(respuesta);
+    var datos = [].concat(data[0],data[1]);
+
+    //Ingresar datos a grafica.
+    chart.updateOptions({
+      xaxis: {
+          categories: data[2],
+        },
+      series: datos,
+    });
+  });
+},
+
+1500);
+
 	</script>
 </body>
 </html>
